# rastersoft

./: .gitignore  .gitignore.txt  CMakeLists.txt  README.md  notes.txt  template.c  template.h
demo/: CMakeLists.txt
demo/inc/: basic_cmds.h  cmd_handler.h  commands.h  demo.h  loading.h  system_vars.h
demo/src/: basic_cmds.c  cmd_handler.c  commands.c  demo.c  loading.c  system_vars.c
inc/: rasterizer.h
rastersoft/: CMakeLists.txt
rastersoft/inc/: arraylist.h  rast_arraylist.h  rast_camera.h  rast_defines.h  rast_entity.h  rast_matrix.h  rast_object.h  rast_vector.h  rastersoft.h
rastersoft/src/: rast_arraylist.c  rast_camera.c  rast_entity.c  rast_matrix.c  rast_object.c  rast_vector.c  rasterizer.c  rastersoft.c
src/: arraylist.c
tests/: CMakeLists.txt
tests/inc/: acutest.h  arraylist_tests.h  matrix_tests.h  object_tests.h
tests/src/: arraylist_tests.c  matrix_tests.c  object_tests.c  tests.c
